--- a/css/style.css
+++ b/css/style.css
@@ -46,13 +46,14 @@
     
 }
 .btn-login{
+    
     border: 1px solid #F88634;
     border-radius: 24px;
     width: 85%;
     background-color: #F8863400;
     height: 40px;
     margin-top: 5%;
-    color: #F88634;
+    color: #F88634 !important;
     margin-left: 11%;
 }
 .lost{
@@ -65,6 +66,10 @@
 .anchor{
     text-decoration: none !important;
     color: #414141;
+}
+.anchor-blue{
+    text-decoration: none !important;
+    color: #2B64B1;
 }
 .new-acc{
     color: #414141;
